// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: Placeholder should render a video placeholder 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
    >
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-4 emotion-5"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder with guidance 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 iZttSL"
    >
      <strong
        aria-hidden="true"
        class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-4 emotion-5"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder without duration 1`] = `
.emotion-4 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-4:hover,
.emotion-4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-6 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
    >
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-4 emotion-5"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Play video, "Dog chases cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-6 emotion-7"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
    >
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Play audio, "Dog barks at cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-4 emotion-5"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder without duration 1`] = `
.emotion-4 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-4:hover,
.emotion-4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-6 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
    >
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-4 emotion-5"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Play audio, "Dog barks at cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-6 emotion-7"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render no-js styles when noJsClassName prop is used 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp"
  >
    <div
      class="GuidanceWrapper-sc-1wm6qsk-0 kDtbWd"
    >
      <strong
        aria-hidden="true"
        class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="StyledNoScript-sc-1wm6qsk-2 fsOOOd"
      />
    </div>
    <button
      class="StyledPlayButton-sc-11nyhtu-1 bBTuxK emotion-6 emotion-7"
    >
      <span
        class="emotion-0 emotion-1"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-4 emotion-5"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;
